# unified_cvo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  UnifiedCvoConfig.cmake.in  acvo_params_gpu.txt  compile_and_eval.bash  cp_results.bash  ctags_gen.bash  cvo_init.txt  cvo_init_guess.txt  cvo_param_map2map.txt  cvo_params.txt  cvo_params_gpu.txt  eval_batch.bash  f2f_cvo_align_test.bash  kf_and_f2f_test.bash  kitti_05.bash  make_all.bash  make_all_sunny.bash  plot_cvo_traj.bash  plot_cvo_traj_lyft.bash  plot_indicator.py  run_acvo_stereo_color.bash  run_acvo_stereo_semantic.bash  run_cvo_align_test.bash  run_cvo_stereo_color.bash  run_exp.sh  run_local_mapping.bash  tartanair_gen.bash  tartanair_run.bash  tartanair_semantics.bash  tartanair_toy.bash  toy_random.sh
baseline/gicp/: 01.txt  02.txt  05.txt  06.txt  07.txt  10.txt
cmake/: FindJsonCpp.cmake  FindTBB.cmake  FindUnifiedCvo.cmake  UnifiedCvoConfig.cmake  cvoConfig.cmake.in
cvo_params/: acvo_geometric_params_gpu.txt  acvo_intensity_params_gpu.txt  acvo_params_gpu.txt  acvo_params_gpu_2.4.txt  acvo_params_gpu_3.2.txt  acvo_semantic_params_gpu.txt  acvo_semantic_params_gpu_0.6.txt  cvo_ethz_lidar_params.yaml  cvo_geometric_params_curvature.yaml  cvo_geometric_params_dense_kernel.yaml  cvo_geometric_params_gpu.txt  cvo_geometric_params_gpu.yaml  cvo_geometric_params_img.yaml  cvo_geometric_params_img_gpu0.yaml  cvo_geometric_params_loam.yaml  cvo_geometric_params_normal.yaml  cvo_geometric_params_random.yaml  cvo_global_params.yaml  cvo_indoor_params.yaml  cvo_intensity_params_gpu.txt  cvo_intensity_params_gpu.yaml  cvo_intensity_params_img.yaml  cvo_intensity_params_img2.yaml  cvo_intensity_params_img_gpu0.yaml  cvo_intensity_params_irls_bunny.yaml  cvo_intensity_params_irls_eth3d.yaml  cvo_intensity_params_irls_exp_tartanair.yaml  cvo_intensity_params_irls_exp_tartanair_semantics.yaml  cvo_intensity_params_irls_kitti.yaml  cvo_intensity_params_irls_pcd.yaml  cvo_intensity_params_irls_tartan.yaml  cvo_intensity_params_irls_tum.yaml  cvo_intensity_params_loam.yaml  cvo_irls_ethz_ba_params.yaml  cvo_irls_kitti_ba_params.yaml  cvo_irls_pcd_params.yaml  cvo_kitti_lidar_params.yaml  cvo_outdoor_BA_params.yaml  cvo_outdoor_params.yaml  cvo_params.txt  (+11 more)
demo_data/: bunny.pcd  source.pcd  target.pcd
demo_data/kitti_loop_closure/: 00.loop_closure_error.txt  02.loop_closure_error.txt  05.loop_closure_error.txt  06.loop_closure_error.txt  kitti_00.txt  (+16 more)
experiment/: plot_inner_product.m  times_relative_tf.m
graph_defs/: graph_3pcd.txt  graph_tum.txt  graph_tum2.txt
matlab_script/: bunnyView.mlx  bunnyalign.mlx  cdf_test.mlx  demoJrmpcSynthetic.m  demoJrmpcTof.m  down.csv  experiment.asv  experiment.m  full.csv  jrmpc.m  mat2off.m  pointcloudPlotter.mlx  pointcloudPlotter_bunny.mlx  pointcloudPlotter_tartanair.mlx  pointcloudPlotter_tartanair_scatter3d.mlx  readme.txt  removePointsAndCenters.m  tartanairPointCloudTest.m  tartanairPointCloudTest.mlx  test.mlx  testError.mlx
python_script/: ICP_exp.py  ICP_exp_full.py  dataplotter.py  dataplotter_semantic_intensity.py  dataplotter_time.py  pointcloud_plotter.py  resultRename.py  test.py
results/: cvo_f2f_tracking_01_1.txt  cvo_f2f_tracking_03.txt  cvo_f2f_tracking_03_semantic.txt  cvo_f2f_tracking_04.txt  cvo_f2f_tracking_04_semantic.txt  cvo_f2f_tracking_05.txt  cvo_f2f_tracking_05_30m_geo.txt  cvo_f2f_tracking_06.txt  cvo_f2f_tracking_06_semantic.txt  cvo_f2f_tracking_07.txt  cvo_f2f_tracking_1.txt  cvo_f2f_tracking_relative-1.txt  cvo_f2f_tracking_relative.txt  cvo_f2f_tracking_relative_01_1.txt  cvo_f2f_tracking_relative_04.txt  cvo_f2f_tracking_relative_05.txt  cvo_f2f_tracking_relative_06.txt  cvo_init_guess.txt  cvo_kf_tracking.txt  cvo_kf_tracking_0.00174-2.txt  cvo_kf_tracking_0.00174-3.txt  cvo_kf_tracking_0.00174.txt  cvo_kf_tracking_0.15.txt  inner_product.txt  inner_product_all.txt  inner_product_all_01_1.txt  inner_product_all_04.txt  inner_product_all_05.txt  inner_product_all_06.txt  inner_product_all_1.txt  inner_product_kf_all.txt  inner_product_normalized.txt
scripts/: .cvo_intensity_img_test.bash.swp  .single_param_test.bash.swp  acvo_intensity_test.bash  acvo_semantic_test.bash  batch_geometric_test.bash  batch_rename.py  boxplot_bunny_benchmark.py  bunny.bash  bunny_boxplot.py  compare_depth_err.py  cvo_adaptive_irls_tartan.bash  cvo_adaptive_irls_tum.bash  cvo_align_global_benchmark.bash  cvo_align_global_benchmark_no_init.bash  cvo_covis_tartan.bash  cvo_geoemtric_cov.bash  cvo_geoemtric_loam.bash  cvo_geoemtric_normal.bash  cvo_geoemtric_range_ell.bash  cvo_geoemtric_test.bash  cvo_geometric_ethz.bash  cvo_geometric_img.bash  cvo_geometric_img_gpu0.bash  cvo_geometric_img_gpu1.bash  cvo_indicator_test.bash  cvo_indicator_test_gpu1.bash  cvo_intensity_img_gpu0.bash  cvo_intensity_img_gpu1.bash  cvo_intensity_img_test.bash  cvo_intensity_img_test2.bash  cvo_intensity_loam.bash  cvo_intensity_lyft.bash  cvo_intensity_rgbd_eth3d.bash  cvo_intensity_rgbd_tartan.bash  cvo_intensity_test.bash  cvo_irls_eth3d.bash  cvo_irls_ethz_loop.bash  cvo_irls_kitti.bash  cvo_irls_kitti_ba.bash  cvo_irls_kitti_eval.bash  (+76 more)
single_tests/: 01_1074.txt  01_1203.txt  01_264.txt  01_276.txt  01_278.txt  01_279.txt  01_318.txt  02_2286.txt  02_4352.txt  02_60.txt  05_1398.txt  05_1589.txt  05_1595.txt  05_393.txt  05_538.txt  05_541.txt  05_925.txt  07_534.txt  07_535.txt  07_631.txt  07_634.txt  07_635.txt  08_2453.txt  08_2455.txt  08_3479.txt  08_3546.txt  09_1241.txt  09_247.txt  09_327.txt  10_138.txt  10_334.txt  10_485.txt  10_529.txt  10_531.txt  10_91.txt
src/: ACvo.cpp  Cvo.cpp  CvoPixelSelector.cpp  CvoPointCloud.cpp  Frame.cpp  KittiHandler.cpp  LeGoLoamPointSelection.cpp  LidarPointSelector.cpp  LoamScanRegistration.cpp  LyftHandler.cpp  PoseGraph.cpp  RawImage.cpp  StaticStereo.cpp  TumHandler.cpp  \  main_acvo_gpu_align.cpp  main_cvo_align.cpp  main_cvo_align_f2f.cpp  main_cvo_gpu_align.cpp  main_kitti_stereo_color.cpp  main_kitti_stereo_odom_file.cpp  main_kitti_stereo_semantic.cpp  main_local_mapping.cpp  main_map2map_batch.cpp  pcd_generator.cpp
(+2475 files in other folders)
